bugfix pagecontrols loading being stuck

--- a/front2/src/sass/_style.scss
+++ b/front2/src/sass/_style.scss
@@ -326,8 +326,11 @@ $app-pad-bottom: 1.5rem;
   }
 
   button.is-primary {
-    background-color: $primary;
-    .tri { fill: $primary; }
+    pointer-events: none;
+    .tri {
+      fill: $primary;
+      pointer-events: none;
+    }
 
     span {
       transform: scale(1.15);
